<resources>
    <string name="app_name">Calculus Test</string>
    <string name="generating">Generating Test...</string>
    <string name="please">Please wait a few seconds</string>
    <string name="view">View Explanation</string>
    <string name="check">Check Answer</string>
    <string name="limits">LIMITS</string>
    <string name="derivates">DERIVATIVES</string>
    <string name="integrals">INTEGRALS</string>
    <string name="mixed">MIXED</string>
    <string name="banner">ca-app-pub-6420027936185714/9418336581</string>
    <string name="banner1">ca-app-pub-6420027936185714/9690348066</string>
</resources>