<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="1"
    android:background="@drawable/bar_back"
    android:orientation="vertical"
    tools:context="com.alkilerprueba.amg.examapk.MainActivity">

        <com.google.android.gms.ads.AdView
        android:layout_gravity="start"
        android:id="@+id/adView"
        android:layout_weight="0.1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner"
        />

    <LinearLayout
        android:layout_weight="0.8"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_height="wrap_content">

    <Button
        android:layout_width="250dp"
        android:text="@string/limits"
        android:id="@+id/limits"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:layout_margin="15dp"
        android:fontFamily="serif"
        android:textColor="@android:color/white"
        android:background="@drawable/button_enabled"
        android:layout_height="wrap_content" />


    <Button
        android:layout_width="250dp"
        android:text="@string/derivates"
        android:id="@+id/derivates"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:layout_margin="15dp"
        android:fontFamily="serif"
        android:textColor="@android:color/white"
        android:background="@drawable/button_enabled"
        android:layout_height="wrap_content" />


    <Button
        android:layout_width="250dp"
        android:text="@string/integrals"
        android:id="@+id/integrals"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:layout_margin="15dp"
        android:fontFamily="serif"
        android:textColor="@android:color/white"
        android:background="@drawable/button_enabled"
        android:layout_height="wrap_content" />


    <Button
        android:layout_width="250dp"
        android:text="@string/mixed"
        android:id="@+id/mix"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:layout_margin="15dp"
        android:fontFamily="serif"
        android:textColor="@android:color/white"
        android:background="@drawable/button_enabled"
        android:layout_height="wrap_content" />

    </LinearLayout>


</LinearLayout>
